[tool.poetry]
name = "ansible-role-firefox"
version = "1.0.1"
description = "Ansible role to configure Firefox."
authors = ["staticdev <staticdev-support@protonmail.com>"]
license = "GPL-2.0-or-later"
readme = "README.rst"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
